--- a/algorithm.html
+++ b/algorithm.html
@@ -31,7 +31,6 @@
         "start" : new Date(2012, 00, 01),
         "end" : new Date(2015, 04, 20)
     };
-
     //////
     // customer data/json
     var customer = {
@@ -43,7 +42,7 @@
     };
     // concrete customers
     var customers = [
-        {"name":"Adelholzener Berchtesgaden","type":"Beverage Storage","size":"Small","region":"South","customer_ID":1},
+        {"name":"Adelholzener Berchtesgaden","type":"Greengrocer","size":"Small","region":"South","customer_ID":1},
         {"name":"Allgut Kiel","type":"Kiosk","size":"Big","region":"North","customer_ID":2},
         {"name":"Allgut Koeln ","type":"Kiosk","size":"Big","region":"West","customer_ID":3},
         {"name":"Allgut Munich","type":"Kiosk","size":"Big","region":"South","customer_ID":4},
@@ -103,8 +102,7 @@
         {"name":"Vegetable Shop Regensburg","type":"Greengrocer","size":"Medium","region":"South","customer_ID":58},
         {"name":"V-Markt Munich","type":"Beverage Storage","size":"Big","region":"South","customer_ID":59},
         {"name":"Yormas Duesseldorf","type":"Bakery","size":"Big","region":"West","customer_ID":60}
-        ];
-
+    ];
     // category rules
     var supermarket_type_classification = [
         {
@@ -128,7 +126,6 @@
             "categories" : ["Beverage", "Snack"]
         }
     ];
-
     //////
     // product data/json
     var products = [];
@@ -1377,18 +1374,15 @@
         ],
         "product_ID" : 33
     };
-
     // push products to array
     products.push(milk, cheese, joghurt, butter, cream, ice, beer, cola, water, fanta, bionade, appleJuice,
-                  roll, whiteBread, toast, pretzel, wholegrainBread, baguette, pork, turkey, beef, ham, sausage,
-                  tomato, cucumber, salad, paprika, eggplant, chips, sticks, peanuts, chocolate, gummi);
-
+            roll, whiteBread, toast, pretzel, wholegrainBread, baguette, pork, turkey, beef, ham, sausage,
+            tomato, cucumber, salad, paprika, eggplant, chips, sticks, peanuts, chocolate, gummi);
     //////
     // utility functions
     var random = function(min, max) {
         return Math.floor(Math.random() * (max + 1 - min)) + min;
     };
-
     function getFoodObjectByName(name) {
         for(var i = 0; i < products.length; i++) {
             if(products[i].name == name){
@@ -1396,7 +1390,6 @@
             }
         }
     }
-
     function getEligibleCategories(type) {
         for(var i = 0; i < supermarket_type_classification.length; i++) {
             if(supermarket_type_classification[i].type == type){
@@ -1404,7 +1397,6 @@
             }
         }
     }
-
     function getEligibleProducts(category) {
         var results = [];
         for(var i = 0; i < products.length; i++) {
@@ -1414,7 +1406,6 @@
         }
         return results;
     }
-
     function convertSizeToInteger(size) {
         var result = 0;
         switch(size) {
@@ -1424,7 +1415,6 @@
         }
         return result;
     }
-
     function count(name) {
         var sum = 0;
         for(var i = 0; i < salesTransactions.length; i++) {
@@ -1434,7 +1424,6 @@
         }
         console.log(name + " occurs " + sum + " times.");
     }
-
     //////
     // salesTransactionEntry data/json
     var salesTransactions = [];
@@ -1452,10 +1441,8 @@
         "measuringUnit" : null,
         "currency" : "EUR"
     };
-
     //////
     // algorithm - calculation
-
     // loop over our customers
     for(var i = 0; i < customers.length; i++) {
         // get the categories by the type of the customer (supermarket, beverage storage, kiosk, ...)
@@ -1465,7 +1452,7 @@
             // for each of the 1 ... 6 categories get the 4 ... 6 eligible products
             var eligibleProducts = getEligibleProducts(eligibleCategories[j]);
             // iterate over the date range
-            for(var date = new Date(2015, 0, 01); date < date_range.end;) {
+            for(var date = new Date(2012, 00, 01); date < new Date(2015, 11, 21);) {
                 // store product data temporarily in this array before pushing it to the salesTransaction array,
                 // in order to merge double product entries
                 var tmpSalestransactions = [];
@@ -1487,19 +1474,19 @@
                         season = "Winter";
                     }
 
-                    // adjust probability due to season
+                    // take seasons into account
+                    var seasonalAdjustedEligibleProducts = eligibleProducts;
                     for(var m = 0; m < eligibleProducts.length; m++) {
-                        // if there is a seasonal rule for the current season ...
+                        // if there is a seasonal rule ...
                         if(eligibleProducts[m].seasonRules[0].name == season) {
                             // ... add it that much time to the seasonalProducts array
-                            for(var m1 = 0; m1 < eligibleProducts[m].seasonRules[0].probability; m1++) {
-                                eligibleProducts.push(eligibleProducts[m]);
+                            for(var m1; m < eligibleProducts[m].seasonRules[0].probability; m++) {
+                                seasonalAdjustedEligibleProducts.push(eligibleProducts[m]);
                             }
                         }
                     }
 
-                    // choose a product
-                    var chosenProduct = eligibleProducts[random(0, eligibleProducts.length - 1)];
+                    var chosenProduct = seasonalAdjustedEligibleProducts[random(0, seasonalAdjustedEligibleProducts.length - 1)];
                     var salesTransactionEntry = {
                         "customer_ID" : customers[i].customer_ID,
                         "customer" : customers[i].name,
@@ -1515,13 +1502,11 @@
                     };
                     // add chosenProduct to the salesTransactions
                     tmpSalestransactions.push(salesTransactionEntry);
-
                     // apply association rules based on the previous added product
                     var associationRules = chosenProduct.associationRules;
                     for (var n = 0; n < associationRules.length; n++) {
                         if (associationRules[n].probability >= random(0, 10)) {
                             var associationProduct = getFoodObjectByName(associationRules[n].name);
-
                             // add chosenProduct to the salesTransactions
                             salesTransactionEntry.product = associationProduct.name;
                             salesTransactionEntry.quantity = associationProduct.quantity[convertSizeToInteger(customers[n].size)].quantity;
@@ -1530,7 +1515,6 @@
                         }
                     }
                 }
-
                 // end of the k for loop
                 date.setDate(date.getDate() + random(6, 10));
 
@@ -1553,7 +1537,6 @@
             }
         }
     }
-
     // console.log(salesTransactions)
     //////
     // export
@@ -1561,23 +1544,19 @@
     var url = 'data:text/json;charset=utf8,' + encodeURIComponent(data);
     window.open(url, '_blank');
     window.focus();
-
     //////
     // tests
-
     // test - salesTransactions
     for(var i = 0; i < products.length; i++) {
         count(products[i].name)
     }
-
     // test - seasons
     /*for(var i = 0; i < seasons.length; i++) {
-        // console.log(seasons[i].name + " lasts from " + seasons[i].start + " to " + seasons[i].end);
-    }*/
-
+     // console.log(seasons[i].name + " lasts from " + seasons[i].start + " to " + seasons[i].end);
+     }*/
     // test - date range
     /*var start_date = date_range.start;
-    for(var i = 0; start_date < date_range.end; i++) {
-        console.log(new Date(start_date.setDate(start_date.getDate() + random(6, 10))));
-    }*/
+     for(var i = 0; start_date < date_range.end; i++) {
+     console.log(new Date(start_date.setDate(start_date.getDate() + random(6, 10))));
+     }*/
 </script>
