--- a/algorithm.html
+++ b/algorithm.html
@@ -134,6 +134,7 @@
         "category": "",
         "measuringUnit": "",
         "probability": null,
+        "quantity" [],
         "price": null,
         "associationRules": [],
         "seasonRules": [],
