--- a/algorithm.html
+++ b/algorithm.html
@@ -1415,13 +1415,14 @@
     // salesTransactionEntry data/json
     var salesTransactions = [];
     var salesTransactionEntry = {
-        "Order_ID" : null,
-        "Customer_ID:" : null,
+        "Transaction_ID" : null,
+        "Customer_ID" : null,
         "Product_ID" : null,
+        "Quantity" : null,
         "Day" : null,
         "Month" : null,
         "Year" : null,
-        "Quantity" : null,
+        "Season" : ""
     };
 
     //////
