--- a/algorithm.html
+++ b/algorithm.html
@@ -1668,7 +1668,7 @@
              }
          }
     }*/
-    // test - date range
+    // test - range of dates
     /*var start_date = date_range.start;
      for(var i = 0; start_date < date_range.end; i++) {
      console.log(new Date(start_date.setDate(start_date.getDate() + random(6, 10))));
